<resources>
    <string name="app_name" translatable="false">E-Commerce-lite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register_screen">register screen</string>
    <string name="login_screen">Login screen</string>
    <string name="login_title">Welcome to Lafyuu</string>
    <string name="login_sub_title">Sign in to continue</string>
    <string name="loginEmailHint">\t Your Email</string>
    <string name="loginPasswordHint">\t Password</string>
    <string name="loginButtonHint">Sign Up</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_a_account">Don’t have a account?</string>
    <string name="register"> Register</string>
    <string name="or">OR</string>
    <string name="loading">Loading</string>
    <string name="ok">ok</string>
    <string name="generic_err_msg">Error please try again later.</string>
    <string name="google_sign_in_field_msg">Google sign in failed, please retry again later.</string>
    <string name="SignUpTitle">Let’s Get Started</string>
    <string name="signUpSubTitle">Create an new accounte</string>
    <string name="SignUpUserName">Full Name</string>
    <string name="signUpPasswordAgain">Password Again</string>
    <string name="have_a_account">have a account?</string>
    <string name="sign_in">Sign In</string>
    <string name="signup_with_google">signUp with google</string>
    <string name="signup_with_facebook">SignUp with facebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_email_to_send_password">Enter the Email to send password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_email_reset">send email reset</string>
</resources>