<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
  <variable
      name="viewModel"
      type="com.example.ecommerce.ui.auth.viewmodel.ForgetPasswordViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.fragment.ForgetPasswordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_email_to_send_password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                android:layout_weight="1"
                android:hint="@string/enter_your_email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_signUp"
                style="@style/PrimaryButtonStyle"
                android:text="@string/send_email_reset"
                android:onClick="@{()->viewModel.sendEmailReset()}"
                />

        </LinearLayout>

    </FrameLayout>
</layout>